message Vector2 {
  optional sint32 x = 1;
  optional sint32 y = 2;
}

message Rectangle {
  optional sint32 left = 1;
  optional sint32 top = 2;
  optional uint32 width = 3;
  optional uint32 height = 4;
}
